<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgr"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/marcador"
        style="@style/AlignTopLeft"
        android:layout_width="match_parent"
        android:layout_height="@dimen/marcador_height"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/rm_image"
            style="@style/AlignTopLeft"
            android:layout_width="@dimen/rm_dimen"
            android:layout_height="@dimen/rm_dimen"
            android:layout_margin="@dimen/margin_8"
            android:src="@drawable/realmadrid" />

        <TextView
            android:id="@+id/rm_text"
            style="@style/WrapContent"
            android:layout_above="@+id/ball_button_rm"
            android:layout_alignLeft="@+id/rm_image"
            android:layout_alignStart="@+id/rm_image"
            android:fontFamily="sans-serif-medium"
            android:text="@string/realMadrid"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/scores"
            style="@style/WrapContent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/real_madrid_goals"
                style="@style/Marcador"
                android:layout_marginRight="@dimen/margin_8"
                android:fontFamily="sans-serif-light" />

            <TextView
                style="@style/WrapContent"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/margin_8"
                android:fontFamily="sans-serif-light"
                android:text="@string/separator"
                android:textColor="@color/white"
                android:textSize="55sp" />

            <TextView
                android:id="@+id/barcelona_goals"
                style="@style/Marcador"
                android:fontFamily="sans-serif-light" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/ball_button_rm"
            style="@style/BallButton"
            android:layout_alignLeft="@id/rm_image"
            android:layout_alignStart="@id/rm_image"
            android:layout_below="@+id/fcb_text"
            android:layout_marginLeft="@dimen/ball_margin"
            android:onClick="onClick" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:text="@string/goals"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/fcb_image"
            android:layout_width="@dimen/fcb_image"
            android:layout_height="@dimen/fcb_image"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/margin_16"
            android:src="@drawable/fcb" />

        <TextView
            android:id="@+id/fcb_text"
            style="@style/WrapContent"
            android:layout_alignLeft="@+id/fcb_image"
            android:layout_alignStart="@+id/fcb_image"
            android:layout_below="@+id/scores"
            android:fontFamily="sans-serif-medium"
            android:text="@string/barcelona"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/ball_button_fcb"
            style="@style/BallButton"
            android:layout_alignEnd="@+id/fcb_image"
            android:layout_alignRight="@+id/fcb_image"
            android:layout_below="@+id/fcb_text"
            android:layout_marginRight="@dimen/ball_margin"
            android:onClick="onClick" />

    </RelativeLayout>

    <ScrollView
        style="@style/WrapContent"
        android:layout_below="@id/marcador"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            style="@style/WrapContent"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <RelativeLayout
                android:id="@+id/shots"
                style="@style/Menu"
                android:layout_marginTop="4dp">

                <ImageButton
                    android:id="@+id/rm_shots_button"
                    style="@style/MenuButtonsLeft"
                    android:onClick="onClick"
                    android:src="@drawable/bullseye1" />

                <TextView
                    android:id="@+id/real_madrid_shots"
                    style="@style/ScoreLeftText"
                    android:layout_toEndOf="@id/rm_shots_button"
                    android:layout_toRightOf="@id/rm_shots_button"
                    android:fontFamily="sans-serif-light" />

                <TextView
                    style="@style/CentreText"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/shots" />

                <ImageButton
                    android:id="@+id/fcb_shots_button"
                    style="@style/MenuButtonsRight"
                    android:onClick="onClick"
                    android:src="@drawable/bullseye1" />

                <TextView
                    android:id="@+id/barcelona_shots"
                    style="@style/ScoreRightText"
                    android:layout_toLeftOf="@id/fcb_shots_button"
                    android:fontFamily="sans-serif-light" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/corners"
                style="@style/Menu"
                android:layout_below="@id/shots"
                tools:context=".MainActivity">

                <ImageButton
                    android:id="@+id/rm_corners_button"
                    style="@style/MenuButtonsLeft"
                    android:onClick="onClick"
                    android:src="@drawable/corner" />

                <TextView
                    android:id="@+id/real_madrid_corners"
                    style="@style/ScoreLeftText"
                    android:layout_toRightOf="@id/rm_corners_button"
                    android:fontFamily="sans-serif-light" />

                <TextView
                    style="@style/CentreText"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/corners" />

                <ImageButton
                    android:id="@+id/fcb_corners_button"
                    style="@style/MenuButtonsRight"
                    android:onClick="onClick"
                    android:src="@drawable/corner" />

                <TextView
                    android:id="@+id/barcelona_corners"
                    style="@style/ScoreRightText"
                    android:layout_toLeftOf="@id/fcb_corners_button"
                    android:fontFamily="sans-serif-light" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/yellow_cards"
                style="@style/Menu"
                android:layout_below="@id/corners"
                tools:context=".MainActivity">

                <ImageButton
                    android:id="@+id/rm_ycards_button"
                    style="@style/MenuButtonsLeft"
                    android:onClick="onClick"
                    android:src="@drawable/yellowc" />

                <TextView
                    android:id="@+id/real_madrid_ycards"
                    style="@style/ScoreLeftText"
                    android:layout_toRightOf="@id/rm_ycards_button"
                    android:fontFamily="sans-serif-light" />

                <TextView
                    style="@style/CentreText"
                    android:layout_width="60dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/ycards" />

                <ImageButton
                    android:id="@+id/barcelona_ycards_button"
                    style="@style/MenuButtonsRight"
                    android:onClick="onClick"
                    android:src="@drawable/yellowc" />

                <TextView
                    android:id="@+id/barcelona_ycards"
                    style="@style/ScoreRightText"
                    android:layout_toLeftOf="@id/barcelona_ycards_button"
                    android:fontFamily="sans-serif-light" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/red_cards"
                style="@style/Menu"
                android:layout_below="@id/yellow_cards"
                tools:context=".MainActivity">

                <ImageButton
                    android:id="@+id/rm_rcards_button"
                    style="@style/MenuButtonsLeft"
                    android:onClick="onClick"
                    android:src="@drawable/redcard" />

                <TextView
                    android:id="@+id/real_madrid_rcards"
                    style="@style/ScoreLeftText"
                    android:layout_toRightOf="@id/rm_rcards_button"
                    android:fontFamily="sans-serif-light" />

                <TextView
                    style="@style/CentreText"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/redcards" />

                <ImageButton
                    android:id="@+id/barcelona_rcards_button"
                    style="@style/MenuButtonsRight"
                    android:onClick="onClick"
                    android:src="@drawable/redcard" />

                <TextView
                    android:id="@+id/barcelona_rcards"
                    style="@style/ScoreRightText"
                    android:layout_toLeftOf="@id/barcelona_rcards_button"
                    android:fontFamily="sans-serif-light" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/outsides"
                style="@style/Menu"
                android:layout_below="@id/red_cards"
                tools:context=".MainActivity">

                <ImageButton
                    android:id="@+id/rm_outsides_button"
                    style="@style/MenuButtonsLeft"
                    android:onClick="onClick"
                    android:src="@drawable/outside1" />

                <TextView
                    android:id="@+id/real_madrid_outsides"
                    style="@style/ScoreLeftText"
                    android:layout_toRightOf="@id/rm_outsides_button"
                    android:fontFamily="sans-serif-light" />

                <TextView
                    style="@style/CentreText"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/offsides" />

                <ImageButton
                    android:id="@+id/barcelona_outsides_button"
                    style="@style/MenuButtonsRight"
                    android:onClick="onClick"
                    android:src="@drawable/outside1" />

                <TextView
                    android:id="@+id/barcelona_outsides"
                    style="@style/ScoreRightText"
                    android:layout_toLeftOf="@id/barcelona_outsides_button"
                    android:fontFamily="sans-serif-light" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/reset"
                style="@style/ResetMenu"
                android:layout_gravity="bottom">

                <Button
                    android:id="@+id/reset_button_rm"
                    style="@style/ResetButton"
                    android:layout_alignParentLeft="true"
                    android:onClick="onClick" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="@+id/reset_button_fcb"
                    android:layout_alignParentRight="@id/reset_button_rm"
                    android:layout_centerInParent="true"
                    android:text="@string/reset_text"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/reset_button_fcb"
                    style="@style/ResetButton"
                    android:layout_alignParentRight="true"
                    android:onClick="onClick" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>